[project]
name = "eventloop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wtf-is-flying", email = "106453261+wtf-is-flying@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
